--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
           </div>
         </div>
         <div id="task-board">
-          <div class="task">
-        </div>
-
+          <div class="task"></div>
     </section>
   </div>
   
