--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
         <div class="task-tabs">
           <div id="under-line"></div>
           <div id="all">
-           <button class = "btn-all">ALL</button> 
+            ALL
+           <!-- <button class = "btn-all">ALL</button>  -->
           </div>
           <div id="ongoing">
-            <button class = "btn-ing">Proceeding</button>
+            Proceeding
+            <!-- <button class = "btn-ing">Proceeding</button> -->
           </div>
           <div id="done">
-            <button class = "btn-end">END</button>
+            END
+            <!-- <button class = "btn-end">END</button> -->
           </div>
         </div>
         <div id="task-board">
