--- a/index.html
+++ b/index.html
@@ -12,25 +12,18 @@
   <div class="container">
     <h1>ToDoList</h1>
     <section class="input-area">
+      
         <input type="text" id="task-input" class="task-box" placeholder="오늘의 할일"/>
         <button id="add-button">+</button>
+        
     </section>
 
     <section class="task-area">
         <div class="task-tabs">
           <div id="under-line"></div>
-          <div id="all">
-            ALL
-           <!-- <button class = "btn-all">ALL</button>  -->
-          </div>
-          <div id="ongoing">
-            Proceeding
-            <!-- <button class = "btn-ing">Proceeding</button> -->
-          </div>
-          <div id="done">
-            END
-            <!-- <button class = "btn-end">END</button> -->
-          </div>
+          <div><button id="all">ALL</button></div>
+          <div><button id="ongoing">Proceeding</button></div>
+          <div><button id="done">END</button></div>
         </div>
         <div id="task-board">
           <div class="task"></div>
